[tool.poetry]
name = "custom-module"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "custom_module"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"
nbdev = "^2.3.9"
nbdime = "^3.1.1"
scikit-learn = "^1.2.0"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
tqdm = "^4.64.1"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
